🎨 Improve structure / format of the code.

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,1 +1,3 @@
-<cadac-three-viewer [cadacThreeHandler]="cadacThreeHandler"/>
+<ngx-cadac-viewer
+  [cadacThreeHandler]="cadacThreeHandler"
+  [id]="'poc'"/>
