--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -1,7 +1,8 @@
 ::ng-deep {
   .cad-container {
     width: 100%;
-    height: 400px;
+    height: 100%;
+    min-height: 500px;
     cursor: move;
     border-radius: 6px;
     overflow: hidden;
